Added JPA Annotations for user-related classes Added GenderEnum to make User class's gender variable easier to work with

--- a/Spring_Boot/hrsystem/src/main/resources/application.yml
+++ b/Spring_Boot/hrsystem/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:sqlserver://conceiversolutions.database.windows.net:1433;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+    url: jdbc:sqlserver://conceiversolutions.database.windows.net:1433;database=conceiversolutionsdb;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
     username: conceiversolutions
     password: Kxy414027
   jpa:
