--- a/Spring_Boot/hrsystem/pom.xml
+++ b/Spring_Boot/hrsystem/pom.xml
@@ -46,6 +46,15 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>com.azure.spring</groupId>-->
+<!--			<artifactId>azure-spring-boot-starter-storage</artifactId>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>commons-fileupload</groupId>-->
+<!--			<artifactId>commons-fileupload</artifactId>-->
+<!--			<version>1.3.1</version>-->
+<!--		</dependency>-->
 
 	</dependencies>
 
