--- a/HR_Management_System/hr_management_system/package.json
+++ b/HR_Management_System/hr_management_system/package.json
@@ -8,6 +8,9 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
+    "axois": "^0.0.1-security",
+    "randomcolor": "^0.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^5.3.3",
@@ -40,7 +43,9 @@
     ]
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.5.0",
     "autoprefixer": "^10.4.8",
+    "faker": "^6.6.6",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8"
   }
