--- a/HR_Management_System/hr_management_system/package.json
+++ b/HR_Management_System/hr_management_system/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "draft-js": "^0.11.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^5.3.3",
