Created Address and Outlet entities which will be used in Team. Address can be used for User as well. Implementation not done yet.
Disabled FAIL_ON_EMPTY_BEANS in application.yml to deal with cyclic dependencies

Edited API Calls and Functionalities for Organization, Department, Team, Outlet, Address

--- a/Spring_Boot/hrsystem/src/main/resources/application.yml
+++ b/Spring_Boot/hrsystem/src/main/resources/application.yml
@@ -24,6 +24,9 @@ spring:
           connectiontimeout: 5000
           timeout: 3000
           writetimeout: 5000
+  jackson:
+    serialization:
+      FAIL_ON_EMPTY_BEANS: false
 
 server:
   port: 9191
