--- a/Spring_Boot/hrsystem/pom.xml
+++ b/Spring_Boot/hrsystem/pom.xml
@@ -48,25 +48,29 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>com.microsoft.sqlserver</groupId>
 			<artifactId>mssql-jdbc</artifactId>
 			<scope>runtime</scope>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-<!--		<dependency>-->
-<!--			<groupId>com.azure.spring</groupId>-->
-<!--			<artifactId>azure-spring-boot-starter-storage</artifactId>-->
-<!--		</dependency>-->
-<!--		<dependency>-->
-<!--			<groupId>commons-fileupload</groupId>-->
-<!--			<artifactId>commons-fileupload</artifactId>-->
-<!--			<version>1.3.1</version>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
+		<!--		<dependency>-->
+		<!--			<groupId>com.azure.spring</groupId>-->
+		<!--			<artifactId>azure-spring-boot-starter-storage</artifactId>-->
+		<!--		</dependency>-->
+		<!--		<dependency>-->
+		<!--			<groupId>commons-fileupload</groupId>-->
+		<!--			<artifactId>commons-fileupload</artifactId>-->
+		<!--			<version>1.3.1</version>-->
+		<!--		</dependency>-->
 
 	</dependencies>
 
