--- a/Spring_Boot/hrsystem/src/main/resources/application.properties
+++ b/Spring_Boot/hrsystem/src/main/resources/application.properties
@@ -1,1 +1,21 @@
+server.port=9191
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/conceiversolutionsdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=password
 
+spring.mail.host=localhost
+spring.mail.port=1025
+spring.mail.username=conceivers
+spring.mail.password=conceivers
+spring.mail.properties.mail.smtp.ssl.trust="*"
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=3000
+spring.mail.properties.mail.smtp.writetimeout=5000
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
