--- a/Spring_Boot/hrsystem/src/main/resources/application.properties
+++ b/Spring_Boot/hrsystem/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/conceiversolutionsdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/conceiversolutionsdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Asia/Singapore
 spring.datasource.username=root
 spring.datasource.password=password
 
@@ -19,3 +19,4 @@ spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=3000
 spring.mail.properties.mail.smtp.writetimeout=5000
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+
