User Class - Added currentPosition attribute to track employee's current position - Replaced all the getter and setters with the Lombok @Getter @Setter annotations - Tweaked constructors accordingly
application.properties
- Added server.error.include-message=ALWAYS to allow REST response bodies to show the error message so we can catch in frontend

JobPosting Class
- Edited bidirectional relationship mappedBy from JobRequest

JobRequest Class
- Added jobRole, approvedDate, lastEditedDate and bidirectional relationship to JobPosting
- Replaced salaryMax and salaryMin with just salary

JobRequestController
- As of now, saveJobRequest, getAllJobRequests, getJobRequestById, getJobRequestsByIncludeTitle, getJobRequestsByIncludeDescription, getJobRequestsByDepartmentId, getJobRequestsByRequestorId are ok to use
- getJobRequestsByApproverId not functional yet

--- a/Spring_Boot/hrsystem/src/main/resources/application.properties
+++ b/Spring_Boot/hrsystem/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=9191
+server.error.include-message=ALWAYS
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
