--- a/HR_Management_System/hr_management_system/package.json
+++ b/HR_Management_System/hr_management_system/package.json
@@ -3,8 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^2.16.0",
+    "@date-io/dayjs": "^2.16.0",
+    "@date-io/luxon": "^2.16.0",
+    "@date-io/moment": "^2.16.0",
     "@headlessui/react": "^1.7.1",
     "@heroicons/react": "^2.0.11",
+    "@tailwindcss/forms": "^0.5.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,10 +17,13 @@
     "draft-js": "^0.11.7",
     "randomcolor": "^0.6.2",
     "react": "^18.2.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-router": "^5.3.3",
     "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
+    "react-select": "^5.4.0",
+    "tailwind-react-datepicker": "^1.1.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
