save job request problem
problem:POST http://localhost:9191/api/jobrequest/saveJobRequest?jobTitle=p&jobDescription=p&justification=p&preferredStartDate=Wed%20Oct%2019%202022%2013:21:18%20GMT+0800%20(%E4%B8%AD%E5%9B%BD%E6%A0%87%E5%87%86%E6%97%B6%E9%97%B4)&jobType=[object%20Object]&jobRole=[object%20Object]&salary=11&jobRequirements=1&departmentId=0&requestedById=1&jobRequestId=3 400

--- a/Spring_Boot/hrsystem/src/main/resources/application.properties
+++ b/Spring_Boot/hrsystem/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=9191
 server.error.include-message=ALWAYS
+server.tomcat.relaxed-query-chars=|,{,},[,]
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
