--- a/HR_Management_System/hr_management_system/package.json
+++ b/HR_Management_System/hr_management_system/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-player": "^2.11.0",
     "react-router": "^5.3.3",
     "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
