--- a/Employee_Self_Service_Platform/ess_platform/package.json
+++ b/Employee_Self_Service_Platform/ess_platform/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.0.0",
     "expo": "~46.0.9",
     "expo-status-bar": "~1.4.0",
+    "faker": "^6.6.6",
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-chart-kit": "^6.12.0",
