--- a/Employee_Self_Service_Platform/ess_platform/package.json
+++ b/Employee_Self_Service_Platform/ess_platform/package.json
@@ -8,16 +8,20 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-native-community/datetimepicker": "^6.5.2",
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/material-bottom-tabs": "^6.2.4",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
     "axios": "^1.0.0",
     "expo": "~46.0.9",
+    "expo-document-picker": "~10.3.0",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-datepicker": "^1.7.2",
+    "react-native-document-picker": "^8.1.1",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-paper": "^4.12.4",
     "react-native-reanimated": "~2.9.1",
