--- a/Employee_Self_Service_Platform/ess_platform/package.json
+++ b/Employee_Self_Service_Platform/ess_platform/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/material-bottom-tabs": "^6.2.4",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
+    "@react-navigation/stack": "^6.3.2",
     "axios": "^1.0.0",
     "expo": "~46.0.9",
     "expo-document-picker": "~10.3.0",
