--- a/Employee_Self_Service_Platform/ess_platform/package.json
+++ b/Employee_Self_Service_Platform/ess_platform/package.json
@@ -26,7 +26,8 @@
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-video": "^5.2.1",
+    "react-native-webview": "11.23.0",
+    "react-native-youtube-iframe": "^2.2.2",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
