--- a/Spring_Boot/hrsystem/src/main/resources/application.properties
+++ b/Spring_Boot/hrsystem/src/main/resources/application.properties
@@ -23,3 +23,5 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=Asia/Singapore
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=20MB
