--- a/HR_Management_System/hr_management_system/package.json
+++ b/HR_Management_System/hr_management_system/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.27.2",
     "date-fns": "^2.29.3",
     "draft-js": "^0.11.7",
+    "js-file-download": "^0.4.12",
     "randomcolor": "^0.6.2",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
