--- a/HR_Management_System/hr_management_system/package.json
+++ b/HR_Management_System/hr_management_system/package.json
@@ -10,6 +10,7 @@
     "@headlessui/react": "^1.7.1",
     "@heroicons/react": "^2.0.11",
     "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -25,6 +26,7 @@
     "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
     "react-select": "^5.4.0",
+    "react-toastify": "^9.0.8",
     "tailwind-react-datepicker": "^1.1.8",
     "web-vitals": "^2.1.4"
   },
