--- a/HR_Management_System/hr_management_system/package.json
+++ b/HR_Management_System/hr_management_system/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^2.29.3",
     "draft-js": "^0.11.7",
     "js-file-download": "^0.4.12",
+    "moment": "^2.29.4",
     "randomcolor": "^0.6.2",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
