--- a/HR_Management_System/hr_management_system/package.json
+++ b/HR_Management_System/hr_management_system/package.json
@@ -24,6 +24,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-moment": "^1.1.2",
     "react-player": "^2.11.0",
     "react-router": "^5.3.3",
     "react-router-dom": "^5.3.3",
