--- a/Employee_Self_Service_Platform/ess_platform/package.json
+++ b/Employee_Self_Service_Platform/ess_platform/package.json
@@ -16,8 +16,8 @@
     "@react-navigation/stack": "^6.3.2",
     "axios": "^1.0.0",
     "expo": "~46.0.9",
-    "expo-document-picker": "~10.3.0",
     "expo-av": "^12.0.4",
+    "expo-document-picker": "~10.3.0",
     "expo-status-bar": "~1.4.0",
     "faker": "^6.6.6",
     "react": "18.0.0",
@@ -30,6 +30,8 @@
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-swipe-list-view": "^3.2.9",
+    "react-native-swipeable": "^0.6.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-webview": "11.23.0",
     "react-native-youtube-iframe": "^2.2.2",
