--- a/Job_Management_Platform/job_management_platform/package.json
+++ b/Job_Management_Platform/job_management_platform/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-moment": "^1.1.2",
     "react-router": "^5.3.3",
     "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
