--- a/HR_Management_System/hr_management_system/package.json
+++ b/HR_Management_System/hr_management_system/package.json
@@ -9,6 +9,7 @@
     "@date-io/moment": "^2.16.0",
     "@headlessui/react": "^1.7.1",
     "@heroicons/react": "^2.0.11",
+    "@react-pdf/renderer": "^3.0.1",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@testing-library/jest-dom": "^5.16.5",
