--- a/Employee_Self_Service_Platform/ess_platform/package.json
+++ b/Employee_Self_Service_Platform/ess_platform/package.json
@@ -7,6 +7,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/poppins": "^0.2.2",
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-community/datetimepicker": "6.2.0",
     "@react-navigation/drawer": "^6.5.0",
@@ -16,8 +17,10 @@
     "@react-navigation/stack": "^6.3.2",
     "axios": "^1.0.0",
     "expo": "~46.0.9",
+    "expo-app-loading": "~2.1.0",
     "expo-av": "^12.0.4",
     "expo-document-picker": "~10.3.0",
+    "expo-font": "~10.2.0",
     "expo-status-bar": "~1.4.0",
     "faker": "^6.6.6",
     "react": "18.0.0",
