--- a/Employee_Self_Service_Platform/ess_platform/package.json
+++ b/Employee_Self_Service_Platform/ess_platform/package.json
@@ -9,13 +9,14 @@
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.2",
     "@react-native-async-storage/async-storage": "^1.17.10",
-    "@react-native-community/datetimepicker": "6.2.0",
+    "@react-native-community/datetimepicker": "^6.2.0",
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/material-bottom-tabs": "^6.2.4",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
     "@react-navigation/stack": "^6.3.2",
     "axios": "^1.0.0",
+    "date-fns": "^2.29.3",
     "expo": "~46.0.9",
     "expo-app-loading": "~2.1.0",
     "expo-av": "^12.0.4",
