--- a/Employee_Self_Service_Platform/ess_platform/package.json
+++ b/Employee_Self_Service_Platform/ess_platform/package.json
@@ -24,6 +24,7 @@
     "expo-font": "~10.2.0",
     "expo-status-bar": "~1.4.0",
     "faker": "^6.6.6",
+    "lottie-react-native": "^5.1.4",
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-chart-kit": "^6.12.0",
