--- a/Employee_Self_Service_Platform/ess_platform/package.json
+++ b/Employee_Self_Service_Platform/ess_platform/package.json
@@ -27,6 +27,7 @@
     "lottie-react-native": "^5.1.4",
     "react": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-calendars": "^1.1291.1",
     "react-native-chart-kit": "^6.12.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-document-picker": "^8.1.1",
