--- a/HR_Management_System/hr_management_system/package.json
+++ b/HR_Management_System/hr_management_system/package.json
@@ -7,8 +7,13 @@
     "@date-io/dayjs": "^2.16.0",
     "@date-io/luxon": "^2.16.0",
     "@date-io/moment": "^2.16.0",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@headlessui/react": "^1.7.1",
     "@heroicons/react": "^2.0.11",
+    "@mui/icons-material": "^5.10.15",
+    "@mui/lab": "^5.0.0-alpha.109",
+    "@mui/material": "^5.10.15",
     "@react-pdf/renderer": "^3.0.1",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
