--- a/Employee_Self_Service_Platform/ess_platform/package.json
+++ b/Employee_Self_Service_Platform/ess_platform/package.json
@@ -10,6 +10,7 @@
     "@expo-google-fonts/poppins": "^0.2.2",
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-community/datetimepicker": "^6.2.0",
+    "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/material-bottom-tabs": "^6.2.4",
     "@react-navigation/native": "^6.0.13",
@@ -22,6 +23,7 @@
     "expo-av": "^12.0.4",
     "expo-document-picker": "~10.3.0",
     "expo-font": "~10.2.0",
+    "expo-linear-gradient": "~11.4.0",
     "expo-status-bar": "~1.4.0",
     "faker": "^6.6.6",
     "lottie-react-native": "^5.1.4",
@@ -32,10 +34,12 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-document-picker": "^8.1.1",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-paper": "^4.12.4",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-swipeable": "^0.6.0",
     "react-native-vector-icons": "^9.2.0",
