--- a/HR_Management_System/hr_management_system/package.json
+++ b/HR_Management_System/hr_management_system/package.json
@@ -25,11 +25,13 @@
     "draft-js": "^0.11.7",
     "js-file-download": "^0.4.12",
     "moment": "^2.29.4",
+    "ps": "^1.0.0",
     "randomcolor": "^0.6.2",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-horizontal-scrolling-menu": "^3.2.3",
     "react-loader-spinner": "^5.3.4",
     "react-moment": "^1.1.2",
     "react-player": "^2.11.0",
