--- a/Employee_Self_Service_Platform/ess_platform/package.json
+++ b/Employee_Self_Service_Platform/ess_platform/package.json
@@ -21,9 +21,12 @@
     "expo": "~46.0.9",
     "expo-app-loading": "~2.1.0",
     "expo-av": "^12.0.4",
+    "expo-constants": "~13.2.4",
     "expo-document-picker": "~10.3.0",
+    "expo-file-system": "~14.1.0",
     "expo-font": "~10.2.0",
     "expo-linear-gradient": "~11.4.0",
+    "expo-sharing": "~10.3.0",
     "expo-status-bar": "~1.4.0",
     "faker": "^6.6.6",
     "lottie-react-native": "^5.1.4",
@@ -44,8 +47,9 @@
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-swipeable": "^0.6.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-webview": "11.23.0",
+    "react-native-webview": "^11.23.0",
     "react-native-youtube-iframe": "^2.2.2",
+    "rn-pdf-reader-js-improved": "^1.0.0",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
