--- a/HR_Management_System/hr_management_system/package.json
+++ b/HR_Management_System/hr_management_system/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
     "react-moment": "^1.1.2",
+    "react-pdf": "^6.2.0",
     "react-player": "^2.11.0",
     "react-router": "^5.3.3",
     "react-router-dom": "^5.3.3",
