--- a/HR_Management_System/hr_management_system/package.json
+++ b/HR_Management_System/hr_management_system/package.json
@@ -23,6 +23,8 @@
     "axios": "^0.27.2",
     "date-fns": "^2.29.3",
     "draft-js": "^0.11.7",
+    "echarts": "^5.4.0",
+    "echarts-for-react": "^3.0.2",
     "js-file-download": "^0.4.12",
     "moment": "^2.29.4",
     "ps": "^1.0.0",
